# VulkanLearning

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
CMake/: CopyDirectory.cmake
src/: logger.cpp  logger.h  main.cpp  model.cpp  model.h  types.h  utils.h  utils.hpp
src/shaders/: CompileShaders.cmake  color.vert  model.frag  model.vert  model_show_normals.frag  model_show_normals.vert  postprocess.vert  texture.frag  texture.vert  triangle.frag  triangle.vert
src/vulkan_base/: vulkan_base.h  vulkan_debug_labels.h  vulkan_device.cpp  vulkan_pipeline.cpp  vulkan_renderpass.cpp  vulkan_swapchain.cpp  vulkan_utils.cpp
